@@ -179,6 +179,79 @@ concat (unsigned int num, ...)
   return result;
 }
 
+/* If we had a standard-compliant vsnprintf() this would be a lot simpler.
+   Maybe in the future we'll include gnulib's version.  */
+
+/* Return a formatted string buffer.  */
+
+const char *
+message_s (unsigned int length, int prefix, const char *fmt, ...)
+{
+  static char *buffer = NULL;
+  static unsigned int bsize = 0;
+  char *bp;
+  va_list args;
+
+  /* Compute the maximum buffer size we'll need, and make sure we have it.  */
+  length += strlen (fmt) + strlen (program) + 4 + INTEGER_LENGTH + 1;
+  if (length > bsize)
+    {
+      bsize = length * 2;
+      buffer = xrealloc (buffer, bsize);
+    }
+
+  bp = buffer;
+  if (prefix)
+    {
+      if (makelevel == 0)
+        sprintf (bp, "%s: ", program);
+      else
+        sprintf (bp, "%s[%u]: ", program, makelevel);
+      bp += strlen (buffer);
+    }
+
+  va_start (args, fmt);
+  vsprintf (bp, fmt, args);
+  va_end (args);
+
+  return buffer;
+}
+
+/* Return a formatted error message in a buffer.  */
+
+const char *
+error_s (unsigned int length, const gmk_floc *flocp, const char *fmt, ...)
+{
+  static char *buffer = NULL;
+  static unsigned int bsize = 0;
+  char *bp;
+  va_list args;
+
+  /* Compute the maximum buffer size we'll need, and make sure we have it.  */
+  length += (strlen (fmt) + strlen (program) + 4 + INTEGER_LENGTH + 1
+             + (flocp && flocp->filenm ? strlen (flocp->filenm) : 0));
+  if (length > bsize)
+    {
+      bsize = length * 2;
+      buffer = xrealloc (buffer, bsize);
+    }
+
+  bp = buffer;
+  if (flocp && flocp->filenm)
+    sprintf (bp, "%s:%lu: ", flocp->filenm, flocp->lineno);
+  else if (makelevel == 0)
+    sprintf (bp, "%s: ", program);
+  else
+    sprintf (bp, "%s[%u]: ", program, makelevel);
+  bp += strlen (bp);
+
+  va_start (args, fmt);
+  vsprintf (bp, fmt, args);
+  va_end (args);
+
+  return buffer;
+}
+
 /* Print a message on stdout.  */
 
 void
